--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,6 +1,7 @@
 name: Deploy Vite build to Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
     branches: [$default-branch]
   # Allow running workflow manually from the Actions tab
@@ -35,8 +36,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      # This enables Pages and gives us the base path we need for the Vite build
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v4
+
       - name: Build with Vite
-        run: npm run build
+        run: npm run build -- --base "${{ steps.pages.outputs.base_path }}"
 
       - name: Upload production build
         uses: actions/upload-pages-artifact@v3
