--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -3,7 +3,8 @@ name: Deploy Vite build to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: [$default-branch]
+    branches:
+      - master
   # Allow running workflow manually from the Actions tab
   workflow_dispatch:
 
